--- a/website/sdds-cs-docs/docs/components/NumberFormat.mdx
+++ b/website/sdds-cs-docs/docs/components/NumberFormat.mdx
@@ -166,3 +166,44 @@ export function App() {
     );
 }
 ```
+
+### Функция форматирования
+Для приведения числа к нужному формату можно использовать функцию `numberFormatter`.
+Она принимает два параметра:
+- строковое значение
+- объект с параметрами форматирования
+
+```tsx
+const num = 100.23
+const options = {
+    /**
+     * Разделитель тысяч.
+     * Может быть строкой (например, " ").
+     * @example 123 456 789
+     */
+    thousandSeparator: ' ',
+    /**
+     * Разделитель десятичных знаков (например, ".").
+     * @example 123.456
+     */
+    decimalSeparator: '.',
+    /**
+     * Количество знаков после запятой.
+     */
+    decimalScale: 3,
+    /**
+     * Фиксирует количество знаков после запятой, даже если число их не содержит (добавляет нули).
+     */
+    fixedDecimalScale: false,
+    /**
+     * Разрешает ввод отрицательных чисел.
+     */
+    allowNegative: true,
+    /**
+     * Разрешает ведущие нули (например, "0123").
+     */
+    allowLeadingZeros: false,
+}
+
+const value = numberFormatter(String(num), options)
+```
